<resources>
    <string name="app_name">MyDebts</string>

    <!-- view names-->
    <string name="list_debts_activity_name">Lista de contas</string>
    <string name="insert_debt_fragment_name">Inserir conta</string>
    <string name="edit_debt_fragment_name">Editar conta</string>

    <!-- dialog selector-->
    <string name="dialog_selector_title">Selecione um mês</string>
    <string name="dialog_selector_cancel_label">Cancelar</string>
    <string-array name="months_array">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>

    <!-- ListDebts -->
    <string name="list_debts_value_label">Valor das dívidas:</string>
    <string name="menu_list_debts_item_filter">Filtro</string>

    <!-- ManageDebts -->
    <string name="manage_debt_error_message">Preencha todos os campos!</string>
    <string name="manage_debt_description_hint">Descrição</string>
    <string name="menage_debt_value_hint">Valor R$</string>
    <string name="menage_debt_month_hint">Clique para selecionar um mês</string>
    <string name="menage_debt_button_save">Salvar</string>
    <string name="menage_debt_button_cancel">Cancelar</string>

    <!-- dialog options -->
    <string name="dialog_button_edit_debt">Editar conta</string>
    <string name="dialog_button_delete_debt">Excluir conta</string>
    <string name="dialog_label">O que deseja realizar?</string>

</resources>
